--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 :root {
   --red-500: hsl(10, 79%, 65%);
   --blue-300: hsl(186, 34%, 65%);
@@ -8,7 +7,9 @@
 }
 
 /* 1. Use a more-intuitive box-sizing model */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -32,18 +33,31 @@ body {
 }
 
 /* 6. Improve media defaults */
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
 
 /* 7. Inherit fonts for form controls */
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
 
 /* 8. Avoid text overflows */
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
 
@@ -51,75 +65,107 @@ p, h1, h2, h3, h4, h5, h6 {
 p {
   text-wrap: pretty;
 }
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   text-wrap: balance;
 }
 
-body{
-    min-height: 100vh;
-    display: grid;
-    place-items: center;
-    background-color: var(--red-100);
-    font-family: DM Sans, sans-serif;
+body {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: var(--red-100);
+  font-family: DM Sans, sans-serif;
 }
 
-main{
-    max-width: 550px;
-    width: 100%;
-    padding: 2rem;
+main {
+  max-width: 550px;
+  width: 100%;
+  padding: 2rem;
 
-    header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1.5rem;
-        background-color: var(--red-500);
-        border-radius: 13px;
-        h1{
-            display: flex;
-            flex-direction: column;
-            font-size: 1.2rem;
-            font-weight: 400;
-            color: white;
-            label{
-                font-size: 1.8rem;
-                font-weight: 700;
-            }
-        }
-    }
-}
-.main_container{
-    background-color: white;
-    border-radius: 13px;
-    padding: 2rem;
-    color: var(--brown-950);
-
-    h2{
-        font-size: 1.5rem;
-        font-weight: 700;
-        margin-bottom: 1.5rem;
-    }
-}
-.chart_list{
-    list-style: none;
-    padding-left: 0;
+  header {
     display: flex;
-    align-items: flex-end;
     justify-content: space-between;
-    margin-block: 1.5rem;
-    li{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 0.5rem;
-        cursor: pointer;
-        div{
-            background-color: var(--red-500);
-            width: 40px;
-            border: none;
-            border-radius: 3px;
-        }
+    align-items: center;
+    padding: 1.5rem;
+    background-color: var(--red-500);
+    border-radius: 13px;
+    h1 {
+      display: flex;
+      flex-direction: column;
+      font-size: 1.2rem;
+      font-weight: 400;
+      color: white;
+      label {
+        font-size: 1.8rem;
+        font-weight: 700;
+      }
     }
+  }
+}
+.main_container {
+  background-color: white;
+  border-radius: 13px;
+  padding: 2rem;
+  color: var(--brown-950);
+
+  h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-bottom: 1.5rem;
+  }
+}
+.chart_list {
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  margin-block: 2.5rem;
+  li {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    cursor: pointer;
+    transition: ease-in-out 300ms;
+    div.bar {
+      background-color: var(--red-500);
+      width: 40px;
+      border: none;
+      border-radius: 3px;
+    }
+    &:hover {
+      opacity: 0.8;
+      .pop {
+        opacity: 1;
+      }
+    }
+    &:nth-child(3) {
+      div.bar {
+        background-color: var(--blue-300);
+      }
+    }
+  }
+}
+.pop {
+  position: absolute;
+  top: -2.2rem;
+  font-size: 0.8rem;
+  font-weight: 700;
+  padding: 4px 6px;
+  text-align: center;
+  background-color: var(--brown-950);
+  color: white;
+  border: none;
+  border-radius: 3px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
 }
 /*
   Estilos para ocultar visualmente la tabla, pero mantenerla accesible
@@ -138,26 +184,25 @@ main{
 }
 
 footer {
-    margin-top: 2rem;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  div {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    div{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        
-    }
-    span{
-        color: var(--brown-400);
-        font-size: 1.1rem;
-    }
+    flex-direction: column;
+    align-items: center;
+  }
+  span {
+    color: var(--brown-400);
+    font-size: 1.1rem;
+  }
 }
-footer div h3{
-    font-size: 1.7rem;
-    font-weight: 700;
+footer div h3 {
+  font-size: 1.7rem;
+  font-weight: 700;
 }
-h4{
-    font-size: 1.2rem;
-    line-height: 1rem;
+h4 {
+  font-size: 1.2rem;
+  line-height: 1rem;
 }
